Setup Heroku App3

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,13 @@
      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="main-content">{{>header}}</div>
+    <div class="main-content">{{>header}}
+        <img src="/img/sh1.jpg">
+        <p><h2>This is a weather App Created By Abhinav Yadav.</h2>
+
+            
+        </p>
+    </div>
     {{>footer}}    
 </body>
 </html>
