--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="main-content">{{>header}}</div>
+    <div class="main-content">{{>header}}
+        <p>This Weather App helps in finding the weather conditions of any place</p>
+    </div>
     {{>footer}}    
 </body>
 </html>
